# VoiceNotes

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONCEPTS.md  DESIGN.md  Dockerfile  Makefile  PRODUCT.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: portability-checklist.md
docs/evidence/: notion-import-sample.md
docs/ideation/: 2026-07-16-system-wide-dictation-ideation.md  backlog.md
docs/plans/: 2026-07-06-001-feat-voice-notes-walking-skeleton-plan.md  2026-07-12-001-feat-multiplatform-windows-support-plan.md  2026-07-18-001-feat-q-discard-shortcut-keyboard-legend-plan.md  2026-07-21-001-feat-playback-speed-control-plan.md
docs/pr/: 2026-07-07-001-frontend-optimisation.md
docs/research/: 2026-07-06-local-voice-notes-ideation.html  web-research-digest.md
docs/solutions/integration-issues/: docker-compose-tilde-home-bind-mount.md
frontend/: index.html  package-lock.json  vite.config.ts
frontend/src/: App.css  App.test.tsx  App.tsx  api.ts  format.test.ts  format.ts  index.css  keyboard.ts  main.tsx  playbackSpeed.test.ts  playbackSpeed.ts  test-helpers.ts  test-setup.ts  theme.ts
scripts/: generate_test_fixtures.py
src/voice_notes/: __init__.py  app.py  archive.py  config.py  ingest.py  transcription.py  worker.py
tests/: conftest.py  fakes.py  test_api.py  test_app.py  test_archive.py  test_engine_selection.py  test_portability.py  test_titles.py  test_transcription.py  test_transcription_cpu_slow.py  test_transcription_slow.py  test_worker.py
tests/fixtures/: spoken.opus  spoken.webm
(+24 files in other folders)
